SOLVED finally figured out the only way to access body in Next is to useEffect the body and then set overflow for modal situation

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,7 +53,7 @@ html {
   justify-content: center;
   align-items: center;
   display: flex;
-  background-image: url(/images/watercolor-paper-background-lightYellow-mirrored.png);
+  background-image: url(/images/watercolor-paper-background-2.jpg);
   background-position: center;
   background-size: auto;
 }
